--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,33 @@ img {
   height: auto;
 }
 
+h1{
+  font-size: 60px;
+  line-height: 66px;
+  font-family: var(--title-font);
+  font-weight: var(--font-regular);
+  color: var(--title-color);
+  text-transform: uppercase;
+}
+
+h2{
+  font-size: 54px;
+  line-height: 64px;
+  font-family: var(--title-font);
+  font-weight: var(--font-regular);
+  color: var(--title-color);
+  text-transform: uppercase;
+}
+
+h3{
+  font-size: 36px;
+  line-height: 48px;
+  font-family: var(--title-font);
+  font-weight: var(--font-regular);
+  color: var(--title-color);
+  text-transform: uppercase;
+}
+
 /*=============== HEADER ===============*/
 .header{
   width: 100%;
@@ -121,15 +148,7 @@ img {
   margin-bottom: 1rem;
 }
 
-.title{
-  font-family: var(--title-font);;
-  font-size: 60px;
-  font-weight: 400;
-  text-transform: uppercase;
-  line-height: 110%;
-}
-
-.subtitle{
+.description{
   font-family: var(--body-font);
   font-size: 18px;
   font-weight: 400;
@@ -233,4 +252,47 @@ img {
   100% {
     transform: translateX(-100%);
   }
+}
+
+/*=============== ANNOUNCEMENT ===============*/
+
+.announcement_section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 80px;
+  padding: 0px 72px;
+  
+  max-width: 1366px;
+  width: 100%;
+  height: 250px;
+  align-items: center;
+}
+
+.announce_text{
+  max-width: 764px;
+  max-height: 195px;
+}
+
+.announce_image{
+  max-width: 394px;
+  max-height: 250px;
+}
+
+/*=============== PRICE ===============*/
+.price_section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 80px;
+  padding: 0px 72px;
+  max-width: 1366px;
+  width: 100%;
+  height: 250px;
+  align-items: center;
+}
+
+.price_text{
+  max-width: 704px;
+  max-height: 147px;
 }
